--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   >
     <a-assets>
       <video
-        src="https://viewy-sas.github.io/DemoJuanValdez/video.mp4"
+        src="video.mp4"
         preload="auto"
         id="vid"
         response-type="arraybuffer"
