--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         crossorigin
         webkit-playsinline
         autoplay
-        muted
+        
         playsinline
       ></video>
     </a-assets>
@@ -77,13 +77,13 @@
     <a-nft
       videohandler
       type="nft"
-      url="test"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/Viewy-SAS/DemoJuanValdez/master/test"
       smooth="true"
       smoothount="10"
-      smoothtolerance="0.01"
-      smooththreshold="5"
+      smootholerance="0.01"
+      smoothhreshold="5"
     >
-      <a-video src="#vid" rotation="-90 0 0" position="548 90 -122" width="720" height="480">
+      <a-video src="#vid" rotation="-90 0 0" position="50 150 -100" width="300" height="175">
       </a-video>
     </a-nft>
     <a-entity camera></a-entity>
