Ajuste tamaño video

--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
     color: white;
   }
 </style>
+<header>
+	<title>Demo Juen Valdez</title>
+</header>
 
 <body style="margin : 0px; overflow: hidden;">
   <div class="arjs-loader">
-    <div>Loading, please wait...</div>
+    <div>Cargando por favor espere...</div>
   </div>
   <a-scene
     vr-mode-ui="enabled: false;"
@@ -83,7 +86,7 @@
       smootholerance="0.01"
       smoothhreshold="5"
     >
-      <a-video src="#vid" rotation="-90 0 0" position="290 60 -150" width="480" height="360">
+      <a-video src="#vid" rotation="-90 0 0" position="290 60 -150" width="213" height="120">
       </a-video>
     </a-nft>
     <a-entity camera></a-entity>
